# mesh-cluster-gen

./: .gitmodules  CMakeLists.txt  main.cpp
impl/inc/cwd/: cwd.h  cwd.h.in
impl/inc/distortion-checker/: distortion-checker.h
impl/inc/mesh-parameterisation/distortion-checker/: distortion-checker.h
impl/inc/mesh-parameterisation/seam-generator/: seam-generator.h
impl/inc/mesh-segmentation/: d-charts.h  utils.h
impl/src/distortion-checker/: distortion-checker.cpp
impl/src/mesh-parameterisation/distortion-checker/: distortion-checker.cpp
impl/src/mesh-parameterisation/seam-generator/: seam-generator.cpp
impl/src/mesh-segmentation/: d-charts.cpp  utils.cpp
